--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <script type="text/javascript">
 
+    //This is a git demo for the lab
+
     function getValue() {
         let value = 0;
         return new Promise(function (resolve, reject) {
